chtl-compiler/generated/css/grammar/SimpleCSSParser.cpp

// Generated from grammar/SimpleCSS.g4 by ANTLR 4.13.1


#include "SimpleCSSVisitor.h"

#include "SimpleCSSParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SimpleCSSParserStaticData final {
  SimpleCSSParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SimpleCSSParserStaticData(const SimpleCSSParserStaticData&) = delete;
  SimpleCSSParserStaticData(SimpleCSSParserStaticData&&) = delete;
  SimpleCSSParserStaticData& operator=(const SimpleCSSParserStaticData&) = delete;
  SimpleCSSParserStaticData& operator=(SimpleCSSParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag simplecssParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
SimpleCSSParserStaticData *simplecssParserStaticData = nullptr;

void simplecssParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (simplecssParserStaticData != nullptr) {
    return;
  }
#else
  assert(simplecssParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SimpleCSSParserStaticData>(
    std::vector<std::string>{
      "stylesheet", "statement", "ruleSet", "selector", "simpleSelector", 
      "elementName", "className", "idName", "pseudoClass", "pseudoElement", 
      "attribute", "attributeOperator", "declaration", "property", "value", 
      "term", "unit", "function", "expression", "atRule", "block", "any"
    },
    std::vector<std::string>{
      "", "','", "'{'", "'}'", "'.'", "'#'", "'*'", "':'", "'::'", "'['", 
      "']'", "'('", "')'", "'='", "'~='", "'|='", "'^='", "'$='", "'*='", 
      "';'", "'px'", "'em'", "'rem'", "'%'", "'vh'", "'vw'", "'pt'", "'cm'", 
      "'mm'", "'in'", "'@'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "COMMENT", 
      "WS", "COLOR", "NUMBER", "PERCENTAGE", "STRING", "URI", "IDENT", "ANY_CHAR"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  simplecssParserStaticData = staticData.release();
}

}

SimpleCSSParser::SimpleCSSParser(TokenStream *input) : SimpleCSSParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SimpleCSSParser::SimpleCSSParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SimpleCSSParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *simplecssParserStaticData->atn, simplecssParserStaticData->decisionToDFA, simplecssParserStaticData->sharedContextCache, options);
}

SimpleCSSParser::~SimpleCSSParser() {
  delete _interpreter;
}

const atn::ATN& SimpleCSSParser::getATN() const {
  return *simplecssParserStaticData->atn;
}

std::string SimpleCSSParser::getGrammarFileName() const {
  return "SimpleCSS.g4";
}

const std::vector<std::string>& SimpleCSSParser::getRuleNames() const {
  return simplecssParserStaticData->ruleNames;
}

const dfa::Vocabulary& SimpleCSSParser::getVocabulary() const {
  return simplecssParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SimpleCSSParser::getSerializedATN() const {
  return simplecssParserStaticData->serializedATN;
}


//----------------- StylesheetContext ------------------------------------------------------------------

SimpleCSSParser::StylesheetContext::StylesheetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleCSSParser::StylesheetContext::EOF() {
  return getToken(SimpleCSSParser::EOF, 0);
}

std::vector<SimpleCSSParser::StatementContext *> SimpleCSSParser::StylesheetContext::statement() {
  return getRuleContexts<SimpleCSSParser::StatementContext>();
}

SimpleCSSParser::StatementContext* SimpleCSSParser::StylesheetContext::statement(size_t i) {
  return getRuleContext<SimpleCSSParser::StatementContext>(i);
}


size_t SimpleCSSParser::StylesheetContext::getRuleIndex() const {
  return SimpleCSSParser::RuleStylesheet;
}


std::any SimpleCSSParser::StylesheetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitStylesheet(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::StylesheetContext* SimpleCSSParser::stylesheet() {
  StylesheetContext *_localctx = _tracker.createInstance<StylesheetContext>(_ctx, getState());
  enterRule(_localctx, 0, SimpleCSSParser::RuleStylesheet);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 275951649776) != 0)) {
      setState(44);
      statement();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(50);
    match(SimpleCSSParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SimpleCSSParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCSSParser::RuleSetContext* SimpleCSSParser::StatementContext::ruleSet() {
  return getRuleContext<SimpleCSSParser::RuleSetContext>(0);
}

SimpleCSSParser::AtRuleContext* SimpleCSSParser::StatementContext::atRule() {
  return getRuleContext<SimpleCSSParser::AtRuleContext>(0);
}


size_t SimpleCSSParser::StatementContext::getRuleIndex() const {
  return SimpleCSSParser::RuleStatement;
}


std::any SimpleCSSParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::StatementContext* SimpleCSSParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SimpleCSSParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(54);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleCSSParser::T__3:
      case SimpleCSSParser::T__4:
      case SimpleCSSParser::T__5:
      case SimpleCSSParser::T__6:
      case SimpleCSSParser::T__7:
      case SimpleCSSParser::T__8:
      case SimpleCSSParser::IDENT: {
        enterOuterAlt(_localctx, 1);
        setState(52);
        ruleSet();
        break;
      }

      case SimpleCSSParser::T__29: {
        enterOuterAlt(_localctx, 2);
        setState(53);
        atRule();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RuleSetContext ------------------------------------------------------------------

SimpleCSSParser::RuleSetContext::RuleSetContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SimpleCSSParser::SelectorContext *> SimpleCSSParser::RuleSetContext::selector() {
  return getRuleContexts<SimpleCSSParser::SelectorContext>();
}

SimpleCSSParser::SelectorContext* SimpleCSSParser::RuleSetContext::selector(size_t i) {
  return getRuleContext<SimpleCSSParser::SelectorContext>(i);
}

std::vector<SimpleCSSParser::DeclarationContext *> SimpleCSSParser::RuleSetContext::declaration() {
  return getRuleContexts<SimpleCSSParser::DeclarationContext>();
}

SimpleCSSParser::DeclarationContext* SimpleCSSParser::RuleSetContext::declaration(size_t i) {
  return getRuleContext<SimpleCSSParser::DeclarationContext>(i);
}


size_t SimpleCSSParser::RuleSetContext::getRuleIndex() const {
  return SimpleCSSParser::RuleRuleSet;
}


std::any SimpleCSSParser::RuleSetContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitRuleSet(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::RuleSetContext* SimpleCSSParser::ruleSet() {
  RuleSetContext *_localctx = _tracker.createInstance<RuleSetContext>(_ctx, getState());
  enterRule(_localctx, 4, SimpleCSSParser::RuleRuleSet);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(56);
    selector();
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SimpleCSSParser::T__0) {
      setState(57);
      match(SimpleCSSParser::T__0);
      setState(58);
      selector();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(SimpleCSSParser::T__1);
    setState(68);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SimpleCSSParser::IDENT) {
      setState(65);
      declaration();
      setState(70);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(71);
    match(SimpleCSSParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectorContext ------------------------------------------------------------------

SimpleCSSParser::SelectorContext::SelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SimpleCSSParser::SimpleSelectorContext *> SimpleCSSParser::SelectorContext::simpleSelector() {
  return getRuleContexts<SimpleCSSParser::SimpleSelectorContext>();
}

SimpleCSSParser::SimpleSelectorContext* SimpleCSSParser::SelectorContext::simpleSelector(size_t i) {
  return getRuleContext<SimpleCSSParser::SimpleSelectorContext>(i);
}


size_t SimpleCSSParser::SelectorContext::getRuleIndex() const {
  return SimpleCSSParser::RuleSelector;
}


std::any SimpleCSSParser::SelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitSelector(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::SelectorContext* SimpleCSSParser::selector() {
  SelectorContext *_localctx = _tracker.createInstance<SelectorContext>(_ctx, getState());
  enterRule(_localctx, 6, SimpleCSSParser::RuleSelector);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(73);
      simpleSelector();
      setState(76); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 274877907952) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SimpleSelectorContext ------------------------------------------------------------------

SimpleCSSParser::SimpleSelectorContext::SimpleSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCSSParser::ElementNameContext* SimpleCSSParser::SimpleSelectorContext::elementName() {
  return getRuleContext<SimpleCSSParser::ElementNameContext>(0);
}

SimpleCSSParser::ClassNameContext* SimpleCSSParser::SimpleSelectorContext::className() {
  return getRuleContext<SimpleCSSParser::ClassNameContext>(0);
}

SimpleCSSParser::IdNameContext* SimpleCSSParser::SimpleSelectorContext::idName() {
  return getRuleContext<SimpleCSSParser::IdNameContext>(0);
}

SimpleCSSParser::PseudoClassContext* SimpleCSSParser::SimpleSelectorContext::pseudoClass() {
  return getRuleContext<SimpleCSSParser::PseudoClassContext>(0);
}

SimpleCSSParser::PseudoElementContext* SimpleCSSParser::SimpleSelectorContext::pseudoElement() {
  return getRuleContext<SimpleCSSParser::PseudoElementContext>(0);
}

SimpleCSSParser::AttributeContext* SimpleCSSParser::SimpleSelectorContext::attribute() {
  return getRuleContext<SimpleCSSParser::AttributeContext>(0);
}


size_t SimpleCSSParser::SimpleSelectorContext::getRuleIndex() const {
  return SimpleCSSParser::RuleSimpleSelector;
}


std::any SimpleCSSParser::SimpleSelectorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitSimpleSelector(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::SimpleSelectorContext* SimpleCSSParser::simpleSelector() {
  SimpleSelectorContext *_localctx = _tracker.createInstance<SimpleSelectorContext>(_ctx, getState());
  enterRule(_localctx, 8, SimpleCSSParser::RuleSimpleSelector);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(92);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SimpleCSSParser::IDENT: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        elementName();
        break;
      }

      case SimpleCSSParser::T__3: {
        enterOuterAlt(_localctx, 2);
        setState(79);
        match(SimpleCSSParser::T__3);
        setState(80);
        className();
        break;
      }

      case SimpleCSSParser::T__4: {
        enterOuterAlt(_localctx, 3);
        setState(81);
        match(SimpleCSSParser::T__4);
        setState(82);
        idName();
        break;
      }

      case SimpleCSSParser::T__5: {
        enterOuterAlt(_localctx, 4);
        setState(83);
        match(SimpleCSSParser::T__5);
        break;
      }

      case SimpleCSSParser::T__6: {
        enterOuterAlt(_localctx, 5);
        setState(84);
        match(SimpleCSSParser::T__6);
        setState(85);
        pseudoClass();
        break;
      }

      case SimpleCSSParser::T__7: {
        enterOuterAlt(_localctx, 6);
        setState(86);
        match(SimpleCSSParser::T__7);
        setState(87);
        pseudoElement();
        break;
      }

      case SimpleCSSParser::T__8: {
        enterOuterAlt(_localctx, 7);
        setState(88);
        match(SimpleCSSParser::T__8);
        setState(89);
        attribute();
        setState(90);
        match(SimpleCSSParser::T__9);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementNameContext ------------------------------------------------------------------

SimpleCSSParser::ElementNameContext::ElementNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleCSSParser::ElementNameContext::IDENT() {
  return getToken(SimpleCSSParser::IDENT, 0);
}


size_t SimpleCSSParser::ElementNameContext::getRuleIndex() const {
  return SimpleCSSParser::RuleElementName;
}


std::any SimpleCSSParser::ElementNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitElementName(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::ElementNameContext* SimpleCSSParser::elementName() {
  ElementNameContext *_localctx = _tracker.createInstance<ElementNameContext>(_ctx, getState());
  enterRule(_localctx, 10, SimpleCSSParser::RuleElementName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(SimpleCSSParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassNameContext ------------------------------------------------------------------

SimpleCSSParser::ClassNameContext::ClassNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleCSSParser::ClassNameContext::IDENT() {
  return getToken(SimpleCSSParser::IDENT, 0);
}


size_t SimpleCSSParser::ClassNameContext::getRuleIndex() const {
  return SimpleCSSParser::RuleClassName;
}


std::any SimpleCSSParser::ClassNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitClassName(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::ClassNameContext* SimpleCSSParser::className() {
  ClassNameContext *_localctx = _tracker.createInstance<ClassNameContext>(_ctx, getState());
  enterRule(_localctx, 12, SimpleCSSParser::RuleClassName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(SimpleCSSParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdNameContext ------------------------------------------------------------------

SimpleCSSParser::IdNameContext::IdNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleCSSParser::IdNameContext::IDENT() {
  return getToken(SimpleCSSParser::IDENT, 0);
}


size_t SimpleCSSParser::IdNameContext::getRuleIndex() const {
  return SimpleCSSParser::RuleIdName;
}


std::any SimpleCSSParser::IdNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitIdName(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::IdNameContext* SimpleCSSParser::idName() {
  IdNameContext *_localctx = _tracker.createInstance<IdNameContext>(_ctx, getState());
  enterRule(_localctx, 14, SimpleCSSParser::RuleIdName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(98);
    match(SimpleCSSParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PseudoClassContext ------------------------------------------------------------------

SimpleCSSParser::PseudoClassContext::PseudoClassContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleCSSParser::PseudoClassContext::IDENT() {
  return getToken(SimpleCSSParser::IDENT, 0);
}

SimpleCSSParser::ExpressionContext* SimpleCSSParser::PseudoClassContext::expression() {
  return getRuleContext<SimpleCSSParser::ExpressionContext>(0);
}


size_t SimpleCSSParser::PseudoClassContext::getRuleIndex() const {
  return SimpleCSSParser::RulePseudoClass;
}


std::any SimpleCSSParser::PseudoClassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitPseudoClass(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::PseudoClassContext* SimpleCSSParser::pseudoClass() {
  PseudoClassContext *_localctx = _tracker.createInstance<PseudoClassContext>(_ctx, getState());
  enterRule(_localctx, 16, SimpleCSSParser::RulePseudoClass);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(SimpleCSSParser::IDENT);
    setState(105);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SimpleCSSParser::T__10) {
      setState(101);
      match(SimpleCSSParser::T__10);
      setState(102);
      expression();
      setState(103);
      match(SimpleCSSParser::T__11);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PseudoElementContext ------------------------------------------------------------------

SimpleCSSParser::PseudoElementContext::PseudoElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SimpleCSSParser::PseudoElementContext::IDENT() {
  return getToken(SimpleCSSParser::IDENT, 0);
}


size_t SimpleCSSParser::PseudoElementContext::getRuleIndex() const {
  return SimpleCSSParser::RulePseudoElement;
}


std::any SimpleCSSParser::PseudoElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitPseudoElement(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::PseudoElementContext* SimpleCSSParser::pseudoElement() {
  PseudoElementContext *_localctx = _tracker.createInstance<PseudoElementContext>(_ctx, getState());
  enterRule(_localctx, 18, SimpleCSSParser::RulePseudoElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(SimpleCSSParser::IDENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeContext ------------------------------------------------------------------

SimpleCSSParser::AttributeContext::AttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SimpleCSSParser::AttributeContext::IDENT() {
  return getTokens(SimpleCSSParser::IDENT);
}

tree::TerminalNode* SimpleCSSParser::AttributeContext::IDENT(size_t i) {
  return getToken(SimpleCSSParser::IDENT, i);
}

SimpleCSSParser::AttributeOperatorContext* SimpleCSSParser::AttributeContext::attributeOperator() {
  return getRuleContext<SimpleCSSParser::AttributeOperatorContext>(0);
}

tree::TerminalNode* SimpleCSSParser::AttributeContext::STRING() {
  return getToken(SimpleCSSParser::STRING, 0);
}


size_t SimpleCSSParser::AttributeContext::getRuleIndex() const {
  return SimpleCSSParser::RuleAttribute;
}


std::any SimpleCSSParser::AttributeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitAttribute(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::AttributeContext* SimpleCSSParser::attribute() {
  AttributeContext *_localctx = _tracker.createInstance<AttributeContext>(_ctx, getState());
  enterRule(_localctx, 20, SimpleCSSParser::RuleAttribute);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(SimpleCSSParser::IDENT);
    setState(113);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 516096) != 0)) {
      setState(110);
      attributeOperator();
      setState(111);
      _la = _input->LA(1);
      if (!(_la == SimpleCSSParser::STRING

      || _la == SimpleCSSParser::IDENT)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttributeOperatorContext ------------------------------------------------------------------

SimpleCSSParser::AttributeOperatorContext::AttributeOperatorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SimpleCSSParser::AttributeOperatorContext::getRuleIndex() const {
  return SimpleCSSParser::RuleAttributeOperator;
}


std::any SimpleCSSParser::AttributeOperatorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitAttributeOperator(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::AttributeOperatorContext* SimpleCSSParser::attributeOperator() {
  AttributeOperatorContext *_localctx = _tracker.createInstance<AttributeOperatorContext>(_ctx, getState());
  enterRule(_localctx, 22, SimpleCSSParser::RuleAttributeOperator);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(115);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 516096) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

SimpleCSSParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SimpleCSSParser::PropertyContext* SimpleCSSParser::DeclarationContext::property() {
  return getRuleContext<SimpleCSSParser::PropertyContext>(0);
}

std::vector<SimpleCSSParser::ValueContext *> SimpleCSSParser::DeclarationContext::value() {
  return getRuleContexts<SimpleCSSParser::ValueContext>();
}

SimpleCSSParser::ValueContext* SimpleCSSParser::DeclarationContext::value(size_t i) {
  return getRuleContext<SimpleCSSParser::ValueContext>(i);
}


size_t SimpleCSSParser::DeclarationContext::getRuleIndex() const {
  return SimpleCSSParser::RuleDeclaration;
}


std::any SimpleCSSParser::DeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SimpleCSSVisitor*>(visitor))
    return parserVisitor->visitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SimpleCSSParser::DeclarationContext* SimpleCSSParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 24, SimpleCSSParser::RuleDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(117);
    property();
    setState(118);
    match(SimpleCSSParser::T__6);
    setState(120); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(119);
              value(0);
              break;
            }
